--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.FinishActivity"></activity>
+        <activity android:name=".Controller.FinishActivity"/>
         <activity android:name=".Controller.SkillActivity" />
         <activity android:name=".Controller.BaseActivity" />
         <activity android:name=".Controller.LeagueActivity" />
